--- a/static/materialize.css
+++ b/static/materialize.css
@@ -336,6 +336,10 @@ select.browser-default {
   display: block;
 }
 
+.darkmode--activated .select-wrapper input.select-dropdown {
+  color: white;
+}
+
 select {
   background-color: rgba(255, 255, 255, 0.9);
   width: 100%;
